[package]
name = "clru"
version = "0.1.0"
authors = ["marmeladema <xademax@gmail.com>"]
edition = "2018"
description = "An LRU cache implementation with constant time operations"
readme = "README.md"
repository = "https://github.com/marmeladema/clru-rs"
license = "MIT"
keywords = ["lru", "cache", "hashmap"]

[dependencies]
