[package]
name = "clru"
version = "0.6.3"
authors = ["marmeladema <xademax@gmail.com>"]
edition = "2024"
description = "An LRU cache implementation with constant time operations and weighted semantic"
readme = "README.md"
repository = "https://github.com/marmeladema/clru-rs"
license = "MIT"
keywords = ["lru", "cache", "hashmap"]

[dependencies]
hashbrown = "0.16"
